# edgeai-gui-app

./: Backend.cpp  Backend.h  CMakeLists.txt  README.md  edgeai-gui-app.pro  main.cpp  main.qml
gst_pipelines/: am62a_pipelines.h  j721e_pipelines.h  j721s2_pipelines.h  j722s_pipelines.h  j784s2_pipelines.h  j784s4_pipelines.h
misc/: content.h
